add service provider to load commands

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,14 @@
   },
   "autoload": {
     "psr-4": {
-      "southernins\\build-tool\\": "src"
+      "SouthernIns\\BuildTool\\": "src"
+    }
+  },
+  "extra": {
+    "laravel":{
+      "provider":[
+        "SouthernIns\\BuildTool\\BuildServiceProvider"
+      ]
     }
   }
 }
