--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "extra": {
     "laravel":{
-      "provider":[
+      "providers":[
         "SouthernIns\\BuildTool\\BuildServiceProvider"
       ]
     }
