--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require": {
-    "illuminate/support": "~5.1"
+    "illuminate/support": "~5.1",
+    "illuminate/console": "~5.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.7"
