--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /.idea/
-composer.phar
+/node_modules
+/notes
 /vendor/
+.DS_Store
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
