--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     }
   ],
   "require": {
-    "illuminate/support": "~5.1",
-    "illuminate/console": "~5.1"
+    "illuminate/support": "~6",
+    "illuminate/console": "~6"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.7"
+      "phpunit/phpunit": "^8.0"
   },
   "autoload": {
     "psr-4": {
