--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "southernins/build-tool",
   "description": "Tool to create build files for deploying to AWS Elastic Beanstalk",
   "license": "MIT",
-  "keywords": ["build"],
+  "keywords": [ "laravel", "AWS","build" ],
   "authors": [
     {
       "name": "Nathan Crews",
@@ -10,8 +10,8 @@
     }
   ],
   "require": {
-    "illuminate/support": "~6",
-    "illuminate/console": "~6"
+    "illuminate/support": "6.*",
+    "illuminate/console": "6.*"
   },
   "require-dev": {
       "phpunit/phpunit": "^8.0"
@@ -28,67 +28,5 @@
         "SouthernIns\\BuildTool\\BuildServiceProvider"
       ]
     }
-  },
-
-  "scripts": {
-
-    "pre-install-cmd": [
-      "SouthernIns\\BuildTool\\ComposerScripts::preInstallCmd"
-    ],
-    "post-install-cmd": [
-      "SouthernIns\\BuildTool\\ComposerScripts::postInstallCmd"
-    ],
-    "pre-update-cmd": [
-      "SouthernIns\\BuildTool\\ComposerScripts::preUpdateCmd"
-    ],
-    "post-update-cmd": [
-      "SouthernIns\\BuildTool\\ComposerScripts::postUpdateCmd"
-    ],
-    "post-status-cmd": [
-      "SouthernIns\\BuildTool\\ComposerScripts::postStatusCmd"
-    ],
-    "pre-archive-cmd": [
-      "SouthernIns\\BuildTool\\ComposerScripts::preArchiveCmd"
-    ],
-    "post-archive-cmd": [
-      "SouthernIns\\BuildTool\\ComposerScripts::postArchiveCmd"
-    ],
-    "pre-autoload-dump": [
-      "SouthernIns\\BuildTool\\ComposerScripts::preAutoloadDump"
-    ],
-    "post-autoload-dump": [
-      "SouthernIns\\BuildTool\\ComposerScripts::postAutoloadDump"
-    ],
-    "post-root-package": [
-      "SouthernIns\\BuildTool\\ComposerScripts::postRootPackage"
-    ],
-    "post-create-project": [
-      "SouthernIns\\BuildTool\\ComposerScripts::postCreateProject"
-    ],
-    "pre-dependencies-solving": [
-      "SouthernIns\\BuildTool\\ComposerScripts::preDependenciesSolving"
-    ],
-    "post-dependencies-solving": [
-      "SouthernIns\\BuildTool\\ComposerScripts::postDependenciesSolving"
-    ],
-    "pre-package-install": [
-      "SouthernIns\\BuildTool\\ComposerScripts::prePackageInstall"
-    ],
-    "post-package-install": [
-      "SouthernIns\\BuildTool\\ComposerScripts::postPackageInstall"
-    ],
-    "pre-package-update": [
-      "SouthernIns\\BuildTool\\ComposerScripts::prePackageUpdate"
-    ],
-    "post-package-update": [
-      "SouthernIns\\BuildTool\\ComposerScripts::postPackageUpdate"
-    ],
-    "pre-package-uninstall": [
-      "SouthernIns\\BuildTool\\ComposerScripts::prePackageUninstall"
-    ],
-    "post-package-uninstall": [
-      "SouthernIns\\BuildTool\\ComposerScripts::postPackageUninstall"
-    ]
   }
-
 }
