--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     }
   ],
   "require": {
-    "illuminate/support": "6.*",
-    "illuminate/console": "6.*"
+    "illuminate/support": "6.* || 7.*",
+    "illuminate/console": "6.* || 7.*"
   },
   "require-dev": {
       "phpunit/phpunit": "^8.0"
