--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "illuminate/console": "6.*"
   },
   "require-dev": {
-      "phpunit/phpunit": "^8.0"
+      "phpunit/phpunit": "^8.0",
+      "orchestra/testbench": "4.0"
   },
   "autoload": {
     "psr-4": {
